fix some linux download formatting

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -1,21 +1,24 @@
+<%- @section = "downloads" %>
+<%- @subsection = "" %>
+
 <div id="main">
   <h1>Download for Linux and Unix</h1>
-  <p>It is easiest to install Git on Linux using the preferred package manager of your Linux distribution.</p>
+  <p>It is easiest to install Git on Linux using the codeferred package manager of your Linux distribution.</p>
 
-  <h2>Debian/Ubuntu</h2>
-  <pre>$ apt-get install git-core</pre>
+  <h3>Debian/Ubuntu</h3>
+  <code>$ apt-get install git-core</code>
 
-  <h2>Fedora</h2>
-  <pre>$ yum install git-core</pre>
+  <h3>Fedora</h3>
+  <code>$ yum install git-core</code>
 
-  <h2>Gentoo</h2>
-  <pre>$ emerge --ask --verbose dev-vcs/git</pre>
+  <h3>Gentoo</h3>
+  <code>$ emerge --ask --verbose dev-vcs/git</code>
 
-  <h2>FreeBSD</h2>
-  <pre>$ cd /usr/ports/devel/git
-$ make install</pre>
+  <h3>FreeBSD</h3>
+  <code>$ cd /usr/ports/devel/git
+$ make install</code>
 
-  <h2>Solaris 11 Express</h2>
-  <pre>$ pkg install developer/versioning/git</pre>
+  <h3>Solaris 11 Excodess</h3>
+  <code>$ pkg install developer/versioning/git</code>
 
 </div>
