--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -17,8 +17,8 @@
             %td= link_to "Mac OS X", "/download/mac", {:class => 'icon mac'}
             %td= link_to "Windows", "/download/win", {:class => 'icon windows'}
           %tr
-            %td= link_to "Debian", "/download/linux", {:class => 'icon debian'}
-            %td= link_to "Solaris v9-10", "/download/linux", {:class => 'icon solaris'}
+            %td= link_to "Linux", "/download/linux", {:class => 'icon debian'}
+            %td= link_to "Solaris", "/download/linux", {:class => 'icon solaris'}
 
       %p
         <a href="http://code.google.com/p/git-core/downloads/list">Older releases</a> are available and the <a href="https://github.com/gitster/git">Git source repository</a> is on GitHub.
@@ -41,7 +41,19 @@
 
   %h2 Logos
 
-  %p Various Git logos in PNG (bitmap) and EPS (vector) formats are available for use in online and print projects. 
+        %p Various Git logos in PNG (bitmap) and EPS (vector) formats are available for use in online and print projects. 
+
+        %p
+          %strong= link_to "View Logos →", "/downloads/logos"
+
+
+  %h2 Git via Git
+
+  %p
+    If you already have Git installed, you can get the latest development version via Git itself:
+
+  %code
+    git clone https://github.com/git/git.git
 
   %p
     %strong= link_to "View Logos →", "/downloads/guis"
