--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -17,8 +17,8 @@
             %td= link_to "Mac OS X", "/download/mac", {:class => 'icon mac'}
             %td= link_to "Windows", "/download/win", {:class => 'icon windows'}
           %tr
-            %td= link_to "Debian", "/download/linux", {:class => 'icon debian'}
-            %td= link_to "Solaris v9-10", "/download/linux", {:class => 'icon solaris'}
+            %td= link_to "Linux", "/download/linux", {:class => 'icon debian'}
+            %td= link_to "Solaris", "/download/linux", {:class => 'icon solaris'}
 
       %p
         <a href="http://code.google.com/p/git-core/downloads/list">Older releases</a> are available and the <a href="https://github.com/gitster/git">Git source repository</a> is on GitHub.
@@ -45,7 +45,7 @@
         %p Various Git logos in PNG (bitmap) and EPS (vector) formats are available for use in online and print projects. 
 
         %p
-          %strong= link_to "View Logos →", "/downloads/guis"
+          %strong= link_to "View Logos →", "/downloads/logos"
 
 
   %h2 Git via Git
