update front page copy

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -9,13 +9,13 @@
           <a href="/about">
           <img src="/images/icons/nav-about.png" />
           <h3>About</h3>
-          <p>A technical overview of how Git works.</p>
+          <p>The advantages of Git compared to other source control systems.</p>
           </a>
         %li#nav-documentation
           <a href="/documentation">
           <img src="/images/icons/nav-documentation.png" />
           <h3>Documentation</h3>
-          <p>Man pages, Pro Git book content, and other reference material.</p>
+          <p>Command reference pages, Pro Git book content, videos and other material.</p>
           </a>  
         %li#nav-downloads
           <a href="/downloads">
@@ -27,7 +27,7 @@
           <a href="/community">
           <img src="/images/icons/nav-community.png" />
           <h3>Community</h3>
-          <p>Mailing list, IRC, and more.</p> </a>
+          <p>Get involved! Mailing list, chat, development and more.</p> </a>
 
     %div#front-book
       <img src="/images/pro-git-56x74.jpg" />
