--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -18,7 +18,7 @@
   </p>
   <h2>Book</h2>
   <p>
-    The entire Pro Git book, written by Scott Chacon and published by Apress, is available here.
+  The entire Pro Git book, written by Scott Chacon and published by Apress, is available <a href="/book">here</a>.
   </p>
   <div class='two-column'>
     <div class='column-left'>
