initial book integration working
* rake task posts updated content to the site
* creates/updates entries
* indexes entries for search
* displays toc and sections from db content

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -25,9 +25,8 @@
         <li class="no-change"><span><%=raw v[:name] %></span></li>
       <% end %>
     <% end %>
-    <li>
-      <a class="more" href="#">See more previous releases →</a>
-    </li>
+    <li>&nbsp;</li>
+    <!-- <li><a class="more" href="#">See more previous releases →</a></li> -->
   </ol>
   <footer>
     <span class="light">Check your version of git by running<br></span>
