--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -8,115 +8,26 @@
     The entire Pro Git book, written by Scott Chacon and published by Apress, is available here. All content is licensed under the <a href="#">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>. Print versions of the book are <a href="#">available on Amazon.com</a>.
   </p>
   <ol class='book-toc'>
+    <% @book.chapters.each do |chapter| %>
     <li class='chapter'>
-      <h2>1. <a href="#">Getting Started</a></h2>
+    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.title.slugize %>"><%= chapter.title %></a></h2>
       <ol>
-        <li>1.1 <a href="#">About Version Control</a></li>
-        <li>1.2 <a href="#">A Short History of Git</a></li>
-        <li>1.3 <a href="#">Git Basics</a></li>
-        <li>1.4 <a href="#">Installing Git</a></li>
-        <li>1.5 <a href="#">First-Time Git Setup</a></li>
-        <li>1.6 <a href="#">Getting Help</a></li>
-        <li>1.7 <a href="#">Summary</a></li>
+        <% chapter.sections.each do |section| %>
+          <% if !section.title.empty? %>
+            <li>
+              <%= chapter.number %>.<%= section.number %> 
+              <a href="/book/<%= @book.code %>/<%= section.slug %>"><%= section.title %></a>
+            </li>
+          <% end %>
+        <% end %>
       </ol>
     </li>
-    <li class='chapter'>
-      <h2>2. <a href="#">Git Basics</a></h2>
-      <ol>
-        <li>2.1 <a href="#">Getting a Git Repository</a></li>
-        <li>2.2 <a href="#">Recording Changes to the Repository</a></li>
-        <li>2.3 <a href="#">Viewing the Commit History</a></li>
-        <li>2.4 <a href="#">Undoing Things</a></li>
-        <li>2.5 <a href="#">Working with Remotes</a></li>
-        <li>2.6 <a href="#">Tagging</a></li>
-        <li>2.7 <a href="#">Tips and Tricks</a></li>
-        <li>2.8 <a href="#">Summary</a></li>
-      </ol>
-    </li>
-    <li class='chapter'>
-      <h2>3. <a href="#">Git Branching</a></h2>
-      <ol>
-        <li>3.1 <a href="#">What a Branch Is</a></li>
-        <li>3.2 <a href="#">Basic Branching and Merging</a></li>
-        <li>3.3 <a href="#">Branch Management</a></li>
-        <li>3.4 <a href="#">Branching Workflows</a></li>
-        <li>3.5 <a href="#">Remote Branches</a></li>
-        <li>3.6 <a href="#">Rebasing</a></li>
-        <li>3.7 <a href="#">Summary</a></li>
-      </ol>
-    </li>
-    <li class='chapter'>
-      <h2>4. <a href="#">Git on the Server</a></h2>
-      <ol>
-        <li>4.1 <a href="#">The Protocols</a></li>
-        <li>4.2 <a href="#">Getting Git on a Server</a></li>
-        <li>4.3 <a href="#">Generating Your SSH Public Key</a></li>
-        <li>4.4 <a href="#">Setting Up the Server</a></li>
-        <li>4.5 <a href="#">Public Access</a></li>
-        <li>4.6 <a href="#">GitWeb</a></li>
-        <li>4.7 <a href="#">Gitosis</a></li>
-        <li>4.8 <a href="#">Gitolite</a></li>
-        <li>4.9 <a href="#">Git Daemon</a></li>
-        <li>4.10 <a href="#">Hosted Git</a></li>
-        <li>4.11 <a href="#">Summary</a></li>
-      </ol>
-    </li>
-    <li class='chapter'>
-      <h2>5. <a href="#">Distributed Git</a></h2>
-      <ol>
-        <li>5.1 <a href="#">Distributed Workflows</a></li>
-        <li>5.2 <a href="#">Contributing to a Project</a></li>
-        <li>5.3 <a href="#">Maintaining a Project</a></li>
-        <li>5.4 <a href="#">Summary</a></li>
-      </ol>
-    </li>
-    <li class='chapter'>
-      <h2>6. <a href="#">Git Tools</a></h2>
-      <ol>
-        <li>6.1 <a href="#">Revision Selection</a></li>
-        <li>6.2 <a href="#">Interactive Staging</a></li>
-        <li>6.3 <a href="#">Stashing</a></li>
-        <li>6.4 <a href="#">Rewriting History</a></li>
-        <li>6.5 <a href="#">Debugging with Git</a></li>
-        <li>6.6 <a href="#">Submodules</a></li>
-        <li>6.7 <a href="#">Subtree Merging</a></li>
-        <li>6.8 <a href="#">Summary</a></li>
-      </ol>
-    </li>
-    <li class='chapter'>
-      <h2>7. <a href="#">Customizing Git</a></h2>
-      <ol>
-        <li>7.1 <a href="#">Git Configuration</a></li>
-        <li>7.2 <a href="#">Git Attributes</a></li>
-        <li>7.3 <a href="#">Git Hooks</a></li>
-        <li>7.4 <a href="#">An Example Git-Enforced Policy</a></li>
-        <li>7.5 <a href="#">Summary</a></li>
-      </ol>
-    </li>
-    <li class='chapter'>
-      <h2>8. <a href="#">Git and Other Systems</a></h2>
-      <ol>
-        <li>8.1 <a href="#">Git and Subversion</a></li>
-        <li>8.2 <a href="#">Migrating to Git</a></li>
-        <li>8.3 <a href="#">Summary</a></li>
-      </ol>
-    </li>
-    <li class='chapter'>
-      <h2>9. <a href="#">Git Internals</a></h2>
-      <ol>
-        <li>9.1 <a href="#">Plumbing and Porcelain</a></li>
-        <li>9.2 <a href="#">Git Objects</a></li>
-        <li>9.3 <a href="#">Git References</a></li>
-        <li>9.4 <a href="#">Packfiles</a></li>
-        <li>9.5 <a href="#">The Refspec</a></li>
-        <li>9.6 <a href="#">Transfer Protocols</a></li>
-        <li>9.7 <a href="#">Maintenance and Data Recovery</a></li>
-        <li>9.8 <a href="#">Summary</a></li>
-      </ol>
-    </li>
+  <% end %>
+  <!--
     <li class='chapter'>
       <h2><a href="#">Index of Commands</a></h2>
     </li>
+  -->
   </ol>
 </div>
 
