pull jasons changes

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -35,10 +35,14 @@ form#search {
   input {
     @include border-radius(20px);
     border: none;
+    margin-top: 5px;
+    margin-bottom: 1px;
+    line-height: 1em;
     width: 100%;
+    height: 20px;
     background-color: transparent;
     color: $font-color;
-    padding: 6px 0 2px 0;
+//    padding: 6px 0 2px 0;
   }
   &.focus {
     border-color: #007175;
@@ -125,4 +129,9 @@ form#search {
     }
 
   }
+}
+
+.callout.top-matches {
+  padding-top: 1em ! important;
+  margin-bottom: 2em ! important;
 }
