--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -57,10 +57,11 @@ aside {
   }
 }
 
-.callout#more-downloads {
-  h2 {
+.callout h2:first-child {
     margin-top: 0;
-  }
+}
+
+.callout#more-downloads {
   .column-left {
     width: 47%;
   }
@@ -146,6 +147,26 @@ aside nav ul {
         display: block;
       }
     }
+  }
+}
+
+.bottom-nav {
+  @extend .callout;
+  @include clearfix;
+  margin-top: 2em;
+  font-weight: bold;
+  .previous {
+    float: left;
+  }
+  .next {
+    float: right;
+  }
+}
+
+section.about {
+  display: none;
+  &.current {
+    display: block;
   }
 }
 
