--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -55,6 +55,128 @@ ul.books-list {
   }
 }
 
+ol#about-nav {
+  @extend .unstyled;
+  @include clearfix;
+  li {
+    display: inline;
+    float: left;
+    margin-right: 10px;
+    &:last-child {
+      margin-right: 0;
+    }
+    a {
+      width: 70px;
+      height: 100px;
+      display: block;
+      opacity: 0.9;
+      text-align: center;
+      padding: 0 15px;
+      font-size: 14px;
+      line-height: 17px;
+      color: $font-color;
+      background: transparent url(/images/icons/nav-circles.png) 0 0 no-repeat;
+      &.current {
+        background: transparent url(/images/icons/nav-circles.png) 0 -100px no-repeat;
+        color: #fff;
+        opacity: 1;
+      }
+      &.one-line {
+        padding-top: 42px;
+        height: 58px;
+      }
+      &.two-line {
+        padding-top: 34px;
+        height: 66px;
+      }
+      &.three-line {
+        padding-top: 25px;
+        height: 75px;
+      }
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+ol.full-search-results {
+  @extend .unstyled;
+  li {
+    margin-bottom: 2em;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  h3 {
+    line-height: 1.4;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  span.relevancy {
+    float: right;
+    padding-left: 5px;
+    margin-left: 30px;
+    img {
+      position: relative;
+      top: -2px;
+    }
+  }
+  a.url {
+    display: block;
+    font-size: 12px;
+    color: $light-font-color;
+    margin-bottom: 0.4em;
+    &:hover {
+      color: darken($light-font-color, 25%);
+    }
+  }
+}
+
+ul.related-material {
+  @extend .unstyled;
+  font-size: 12px;
+  margin-bottom: 3em;
+  li {
+    margin-bottom: 1em;
+    line-height: 1.5;
+    padding-left: 25px;
+    min-height: 17px;
+    &.reference {
+      background: transparent url(/images/icons/document-sm.png) 3px 0 no-repeat;
+    }
+    &.book {
+      background: transparent url(/images/icons/book-sm.png) 0 0 no-repeat;
+    }
+    &.video {
+      background: transparent url(/images/icons/film-sm.png) 2px 0 no-repeat;
+    }
+  }
+}
+
+ul.stackoverflow {
+  @extend .unstyled;
+  font-size: 12px;
+  li {
+    margin-bottom: 1em;
+  }
+  a {
+    display: block;
+    line-height: 1.2;
+    font-weight: bold;
+  }
+  span {
+    display: block;
+    color: $light-font-color;
+    strong {
+      color: darken($light-font-color, 10%);
+    }
+    em {
+      color: lighten($light-font-color, 20%);
+    }
+  }
+}
+
 table.binaries {
   td {
     padding: 8px 20px 6px 0;
