--- a/app/assets/stylesheets/man-pages.css.scss
+++ b/app/assets/stylesheets/man-pages.css.scss
@@ -13,7 +13,7 @@
 		}
 	}
 	p.nutshell {
-	  background-color: rgba(223, 221, 213, 0.33);
+	  background-color: #e8e7dd;
 	  padding: 1em;
 	}
 
@@ -31,8 +31,8 @@
   }
 
 	// Man pages
-	pre.content {
-	  background-color: rgba(223, 221, 213, 0.33);
+	div.verseblock-content {
+	  background-color: #e8e7dd;
 	  padding: 1em;
 	  margin-bottom: 1em;
 	  white-space: pre;
