--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -70,6 +70,11 @@ h4 {
     font-size: 12px;
   }
 }
+aside h4 {
+  color: $light-font-color;
+  line-height: 1.4;
+  margin-bottom: 1em;
+}
 h5 {
   font-size: 12px;
 }
@@ -289,4 +294,9 @@ a#gui-os-filter {
 
 div.more {
   display: none;
+}
+
+.highlight {
+  background-color: #eee0b5;
+  padding: 2px;
 }
