--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -9,21 +9,30 @@
 %div#main
   %h1 About
 
-  %a{:name => 'cheap-local-branching'}
-  %h2 Cheap Local Branching
+  %ol#about-nav
+    %li
+      <a href="#" class="current three-line" id="nav-branching-and-merging" data-section-id="branching-and-merging">Branching and Merging</a>
+    %li
+      <a href="#" class="two-line" id="nav-small-and-fast" data-section-id="small-and-fast">Small and Fast</a>
+    %li
+      <a href="#" class="one-line" id="nav-distributed" data-section-id="distributed">Distributed</a>
+    %li
+      <a href="#" class="two-line" id="nav-multiple-workflows" data-section-id="multiple-workflows">Multiple Workflows</a>
+    %li
+      <a href="#" class="two-line" id="nav-staging-area" data-section-id="staging-area">Staging Area</a>
+    %li
+      <a href="#" class="three-line" id="nav-free-and-open-sourced" data-section-id="free-and-open-sourced">Free and Open Sourced</a>
 
-  %p
-    Probably Git's most compelling feature that really makes it stand
-    apart from nearly every other SCM out there is its branching
-    model.  It is completely different from all of the models I'm 
-    comparing it to here, most of which recommend that the best branch
-    is basically a clone of the repository in a new directory.
+  %section.about#branching-and-merging.current
+    %h2 Branching and Merging
 
-  %p
-    %strong= link_to "Read More →", "#", {:class => 'read-more'}
+    %p
+      Probably Git's most compelling feature that really makes it stand
+      apart from nearly every other SCM out there is its branching
+      model.  It is completely different from all of the models I'm 
+      comparing it to here, most of which recommend that the best branch
+      is basically a clone of the repository in a new directory.
 
-
-  %div.more
     %p
       Git does not work like that.  Git will allow you to have multiple
       local branches that can be entirely independent of each other and
@@ -52,38 +61,16 @@
     %p
       You can find ways to do some of this with other systems, but the work involved is much more difficult and error-prone. Git makes this process incredibly easy and it changes the way most developers work when they learn it.
 
-  %a{:name => 'everything-is-local'}
-  %h2 Everything is Local
+    %div.bottom-nav
+      =link_to "Small and Fast →", "#", {:class => 'next', 'data-section-id' => 'small-and-fast'}
 
-  %p
-    This is basically true of all the distributed SCMs, but in my experience even more so with Git. There is very little outside of 'fetch', 'pull' and 'push' that communicates in any way with anything other than your hard disk.
 
-  %p
-    %strong= link_to "Read More →", "#", {:class => 'read-more'}
-
-  %div.more
-    %p
-      This not only makes most operations much faster than you may be used to, but it also allows you to work on stuff offline. That may not sound like a big deal, but I'm always amazed at how often I actually do work offline. Being able to branch, merge, commit and browse history of your project while on the plane or train is very productive.
+  %section.about#small-and-fast
+    %h2 Small and Fast
 
     %p
-      <img src="/images/about/local-remote.png" alt="Local / Remote" width="620" />
+      Git is fast. Everyone—even most of the hard core users of these other systems—generally give Git this title. With Git, all operations are performed locally giving it a bit of a leg up on SVN and Perforce, both of which require network access for certain operations. However, even compared to the other DSCMs that also perform operations locally, Git is pretty fast.
 
-    %p
-      Even in Mercurial, common commands like 'incoming' and 'outgoing' hit the server, whereas with Git you can 'fetch' all the servers data before going offline and do comparisons, merges and logs of data that is on the server but not in your local branches yet.
-
-    %p
-      This means that it's very easy to have copies of not only your branches, but also of everyone's branches that are working with you in your Git repository without having to mess your own stuff up.
-
-  %a{:name => 'git-is-fast'}
-  %h2 Git is Fast
-
-  %p
-    Git is fast. Everyone—even most of the hard core users of these other systems—generally give Git this title. With Git, all operations are performed locally giving it a bit of a leg up on SVN and Perforce, both of which require network access for certain operations. However, even compared to the other DSCMs that also perform operations locally, Git is pretty fast.
-
-  %p
-    %strong= link_to "Read More →", "#", {:class => 'read-more'}
-
-  %div.more
     %p
       Part of this is likely because it was built to work on the Linux kernel, which means that it has had to deal effectively with large repositories from day one. Additionally, Git is written in C, reducing the overhead of runtimes associated with higher-level languages. Another reason that Git is so fast is that the primary developers have made this a design goal of the application.
 
@@ -207,78 +194,16 @@
     %code
       svn checkout http://code.djangoproject.com/svn/django/trunk dj-svn
 
-  %a{:name => 'git-is-small'}
-  %h2 Git is Small
+    %div.bottom-nav
+      =link_to "← Branching and Merging", "#", {:class => 'previous', 'data-section-id' => 'branching-and-merging'}
+      =link_to "Distributed →", "#", {:class => 'next', 'data-section-id' => 'distributed'}
 
-  %p
-    Git is really good at conserving disk space. Your Git directory will (in general) barely be larger than an SVN checkout—in some cases actually smaller (apparently a lot can go in those .svn dirs).
-
-  %p
-    %strong= link_to "Read More →", "#", {:class => 'read-more'}
-
-  %div.more
-    %p
-      The following numbers were taken from clones of the Django project in each of its semi-official Git mirrors at the same point in its history.
-
-    <table width="100%" class="data">
-    <tr>
-    <th></th>
-    <th>Git</th>
-    <th>Hg</th>
-    <th>Bzr</th>
-    <th>SVN</th>
-    </tr>
-    <tr>
-    <td>Repo Alone</td>
-    <td class="sweet">24M</td>
-    <td>34M</td>
-    <td>45M</td>
-    <td></td>
-    </tr>
-    <tr>
-    <td>Entire Directory</td>
-    <td class="compare">43M</td>
-    <td>53M</td>
-    <td>64M</td>
-    <td class="compare">61M</td>
-    </tr>
-    </table>
-
-  %a{:name => 'staging-area'}
-  %h2 The Staging Area
-
-  %p
-    Unlike the other systems, Git has what it calls the "staging area" or "index". This is an intermediate area that you can setup what you want your commit to look like before you commit it.
-
-  %p
-    %strong= link_to "Read More →", "#", {:class => 'read-more'}
-
-  %div.more
-    %p
-      The cool thing about the staging area, and what sets Git apart from all these other tools, is that you can easily stage some of your files as you finish them and then commit them without committing all the modified files in your working directory, or having to list them on the command line during the commit
+  %section.about#distributed
+    %h2 Distributed
 
     %p
-      <img src="/images/about/index1.png" alt="Index 1" />
+      One of the coolest features of any of the Distributed SCMs, Git included, is that it's distributed. This means that instead of doing a "checkout" of the current tip of the source code, you do a "clone" of the entire repository.
 
-    %p
-      This also allows you to stage only portions of a modified file. Gone are the days of making two logically unrelated modifications to a file before you realized that you forgot to commit one them. Now you can just stage the change you need for the current commit and stage the other change for the next commit. This feature scales up to as many different changes to your file as you need.
-
-    %p
-      Of course, Git also makes it pretty easy to ignore this feature if you don't want that kind of control—just slap a '-a' to your commit command in order to add all changes to all files to the staging area.
-
-    %p
-      <img src="/images/about/index2.png" alt="Index 2" />
-
-  %a{:name => 'distributed'}
-  %h2 Distributed
-
-  %p
-    One of the coolest features of any of the Distributed SCMs, Git included, is that it's distributed. This means that instead of doing a "checkout" of the current tip of the source code, you do a "clone" of the entire repository.
-
-  %p
-    %strong= link_to "Read More →", "#", {:class => 'read-more'}
-
-  %div.more
     %p
       This means that even if you're using a centralized workflow, every user has what is essentially a full backup of the main server, each of which could be pushed up to replace the main server in the event of a crash or corruption. There is basically no single point of failure with Git unless there is only a single point.
 
@@ -310,16 +235,16 @@
     </td></tr>
     </table>
 
-  %a{:name => 'any-workflow'}
-  %h2 Any Workflow
+    %div.bottom-nav
+      =link_to "← Small and Fast", "#", {:class => 'previous', 'data-section-id' => 'small-and-fast'}
+      =link_to "Multiple Workflows →", "#", {:class => 'next', 'data-section-id' => 'multiple-workflows'}
 
-  %p
-    One of the amazing things about Git is that because of its distributed nature and super branching system, you can easily implement pretty much any workflow you can think of relatively easily.
+  %section.about#multiple-workflows
+    %h2 Multiple Workflows
 
-  %p
-    %strong= link_to "Read More →", "#", {:class => 'read-more'}
+    %p
+      One of the amazing things about Git is that because of its distributed nature and super branching system, you can easily implement pretty much any workflow you can think of relatively easily.
 
-  %div.more
     %h3 Subversion-Style Workflow
 
     %p
@@ -343,3 +268,55 @@
 
     %p
       <img src="/images/about/workflow-c.png" alt="Workflow C" />
+
+    %div.bottom-nav
+      =link_to "← Distributed", "#", {:class => 'previous', 'data-section-id' => 'distributed'}
+      =link_to "Staging Area →", "#", {:class => 'next', 'data-section-id' => 'staging-area'}
+
+  %section.about#staging-area
+    %h2 Staging Area
+
+    %p
+      Unlike the other systems, Git has what it calls the "staging area" or "index". This is an intermediate area that you can setup what you want your commit to look like before you commit it.
+
+    %p
+      The cool thing about the staging area, and what sets Git apart from all these other tools, is that you can easily stage some of your files as you finish them and then commit them without committing all the modified files in your working directory, or having to list them on the command line during the commit
+
+    %p
+      <img src="/images/about/index1.png" alt="Index 1" />
+
+    %p
+      This also allows you to stage only portions of a modified file. Gone are the days of making two logically unrelated modifications to a file before you realized that you forgot to commit one them. Now you can just stage the change you need for the current commit and stage the other change for the next commit. This feature scales up to as many different changes to your file as you need.
+
+    %p
+      Of course, Git also makes it pretty easy to ignore this feature if you don't want that kind of control—just slap a '-a' to your commit command in order to add all changes to all files to the staging area.
+
+    %p
+      <img src="/images/about/index2.png" alt="Index 2" />
+
+    %div.bottom-nav
+      =link_to "← Multiple Workflows", "#", {:class => 'previous', 'data-section-id' => 'multiple-workflows'}
+      =link_to "Free and Open Sourced →", "#", {:class => 'next', 'data-section-id' => 'free-and-open-sourced'}
+
+
+  %section.about#free-and-open-sourced
+    %h2 Free and Open Sourced
+
+    %p
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    %p
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    %div.bottom-nav
+      =link_to "← Staging Area", "#", {:class => 'previous', 'data-section-id' => 'staging-area'}
