utf8 capable permalinks

--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -1,6 +1,10 @@
 <% @section    = 'documentation' %>
 <% @subsection = 'book' %>
 
+<% content_for :sidebar do %>
+  <%= render 'translations' %>
+<% end %>
+
 <div id='main'>
   <h1>Book</h1>
   <img style="float:right;margin: -20px 40px 0 40px;" src="/images/pro-git-118x157.jpg" />
@@ -10,7 +14,7 @@
   <ol class='book-toc'>
     <% @book.chapters.each do |chapter| %>
     <li class='chapter'>
-    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.title.slugize %>"><%= chapter.title %></a></h2>
+    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
       <ol>
         <% chapter.sections.each do |section| %>
           <% if !section.title.empty? %>
