--- a/app/views/doc/book_section.html.erb
+++ b/app/views/doc/book_section.html.erb
@@ -1,6 +1,10 @@
 <% @section    = 'documentation' %>
 <% @subsection = 'book' %>
 
+<% content_for :sidebar do %>
+  <%= render 'translations' %>
+<% end %>
+
 <div id='main'>
   <h1><%= @content.cs_number %> <%= @content.chapter.title %> - <%= @content.title %></h1>
   <div><%=raw @content.html %></div>
