More Asciidoc esoterica
- support quoteblocks
- support bibliography references
- support ``...'' double quotes
- handle link: and xref that span lines
- convert URLs to links

--- a/app/assets/stylesheets/man-pages.css.scss
+++ b/app/assets/stylesheets/man-pages.css.scss
@@ -50,6 +50,18 @@
 			@extend code;
 		}
 	}
+
+  .quoteblock {
+    margin-left: 1em;
+    padding-left: 1em;
+    border-left: 5px solid $base-border-color;
+    .content {
+      .paragraph p {
+        color: $light-font-color;
+      }
+    }
+  }
+
 	.admonitionblock {
 		table {
 			margin-bottom: 1em;
