perhaps the least efficient possible way i could do this.

--- a/app/views/doc/book_section.html.erb
+++ b/app/views/doc/book_section.html.erb
@@ -6,6 +6,8 @@
 <% end %>
 
 <div id='main'>
-  <h1><%= @content.cs_number %> <%= @content.chapter.title %> - <%= @content.title %></h1>
-  <div><%=raw @content.html %></div>
+  <% if !@content.title.empty? %>
+    <h1><%= @content.cs_number %> <%= @content.chapter.title %> - <%= @content.title %></h1>
+  <% end %>
+  <div><%=raw linkify(@content.html, @content) %></div>
 </div>
