code blocks look normal again

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -14,3 +14,12 @@ ol.book-toc {
     padding-left: 4px;
   }
 }
+
+.book code {
+  display: inline;
+  padding: 1px;
+}
+
+.book pre code {
+  display: block;
+}
