--- a/app/views/doc/book_section.html.erb
+++ b/app/views/doc/book_section.html.erb
@@ -5,7 +5,7 @@
   <%= render 'translations' %>
 <% end %>
 
-<div id='main'>
+<div id='main' class="book">
   <% if !@content.title.empty? %>
     <h1><%= @content.cs_number %> <%= @content.chapter.title %> - <%= @content.title %></h1>
   <% end %>
