link book on doc main page

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -23,40 +23,17 @@
   <div class='two-column'>
     <div class='column-left'>
       <ol class='book-toc'>
-        <li class='chapter'>
-          <h2>1. <a href="#">Getting Started</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2>2. <a href="#">Git Basics</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2>3. <a href="#">Git Branching</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2>4. <a href="#">Git on the Server</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2>5. <a href="#">Distributed Git</a></h2>
-        </li>
-      </ol>
-    </div>
-    <div class='column-right'>
-      <ol class='book-toc'>
-        <li class='chapter'>
-          <h2>6. <a href="#">Git Tools</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2>7. <a href="#">Customizing Git</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2>8. <a href="#">Git and Other Systems</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2>9. <a href="#">Git Internals</a></h2>
-        </li>
-        <li class='chapter'>
-          <h2><a href="#">Index of Commands</a></h2>
-        </li>
+        <% @book.chapters.each do |chapter| %>
+          <li class='chapter'>
+            <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
+            </li>
+            <% if chapter.number == 5 %>
+              </ol>
+            </div>
+            <div class='column-right'>
+              <ol class='book-toc'>
+            <% end %>
+        <% end %>
       </ol>
     </div>
   </div>
