--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -2,6 +2,8 @@
 This book is translated into 
   <a href="/book/de">German</a>, 
   <a href="/book/zh">Chinese</a>, 
+  <a href="/book/fr">French</a>,
+  <a href="/book/ru">Russian</a>,
   <a href="/book/ja">Japanese</a> and 
   <a href="/book/nl">Dutch</a>
 </p>
@@ -11,11 +13,9 @@ Partial translations available in
   <a href="/book/ar">Arabic</a>,
   <a href="/book/cs">Czech</a>,
   <a href="/book/es">Spanish</a>,
-  <a href="/book/fr">French</a>,
   <a href="/book/id">Indonesian</a>,
   <a href="/book/it">Italian</a>,
   <a href="/book/mk">Macedonian</a>,
-  <a href="/book/pl">Polish</a>,
-  <a href="/book/th">Thai</a> and
-  <a href="/book/ru">Russian</a>
+  <a href="/book/pl">Polish</a> and
+  <a href="/book/th">Thai</a>
 </p>
