--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -14,13 +14,13 @@
   <ol class='book-toc'>
     <% @book.chapters.each do |chapter| %>
     <li class='chapter'>
-    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
+    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
       <ol>
         <% chapter.sections.each do |section| %>
           <% if !section.title.empty? %>
             <li>
               <%= chapter.number %>.<%= section.number %> 
-              <a href="/book/<%= @book.code %>/<%= section.slug %>"><%= section.title %></a>
+              <a href="/book/<%= @book.code %>/<%= section.slug %>"><%=raw section.title %></a>
             </li>
           <% end %>
         <% end %>
