--- a/app/views/doc/book_section.html.erb
+++ b/app/views/doc/book_section.html.erb
@@ -7,7 +7,7 @@
 
 <div id='main' class="book">
   <% if !@content.title.empty? %>
-    <h1><%= @content.cs_number %> <%= @content.chapter.title %> - <%= @content.title %></h1>
+    <h1><%= @content.cs_number %> <%=raw @content.chapter.title %> - <%=raw @content.title %></h1>
   <% end %>
   <div><%=raw linkify(@content.html, @content) %></div>
 </div>
