revert the revert so synopsises are styled again

--- a/app/assets/stylesheets/man-pages.css.scss
+++ b/app/assets/stylesheets/man-pages.css.scss
@@ -31,18 +31,25 @@
   }
 
 	// Man pages
-	div.verseblock-content {
-	  background-color: #e8e7dd;
-	  padding: 1em;
-	  margin-bottom: 1em;
-	  white-space: pre;
-	  color: $fixed-width-font-color;
-	  font-family: $fixed-width-font-family;
-	  line-height: $fixed-width-line-height;
-	  em {
-	  	font-weight: bold;
-	  	font-style: normal;
-	  }
+	div.verseblock {
+    pre.content {
+      background-color: #e8e7dd;
+      padding: 1em;
+      margin-bottom: 1em;
+      white-space: pre;
+      color: $fixed-width-font-color;
+      font-family: $fixed-width-font-family;
+      line-height: $fixed-width-line-height;
+      white-space: pre-wrap;       /* css-3 */
+      white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+      white-space: -pre-wrap;      /* Opera 4-6 */
+      white-space: -o-pre-wrap;    /* Opera 7 */
+      word-wrap: break-word;       /* Internet Explorer 5.5+ */
+      em {
+        font-weight: bold;
+        font-style: normal;
+      }
+    }
 	}
 
 	.listingblock {
